i18n/es/docusaurus-plugin-content-docs/version-3.1.0/features/moderation.md
---
title: Moderacion
---

Para facilitar el trabajo de tus moderadores, RaidProtect integra comandos de moderacion muy utiles que te permiten interactuar directamente con las funciones nativas de Discord, como **banear** y **expulsar** usuarios.

Ademas de estas acciones, RaidProtect envia mensajes directos al usuario sancionado para explicar el motivo de su sancion, y esto tambien se registra en los registros del servidor para tu referencia.

:::info
Los comandos de moderacion son [utilizables por prefijo](../guides/prefix.md).
:::

## 🔨 Banear a un usuario {#ban}

Usa el comando: ```/ban [@usuario] [motivo]```

Reemplaza `[@usuario]` con la mencion o ID deseado y `[motivo]` con el motivo de la sancion.

:::tip
Puedes banear a un usuario usando su [ID de Discord](https://dfr.gg/wiki/interface/mode-developpeur), incluso si no esta actualmente en linea o presente en tu servidor.
:::

## 👢 Expulsar a un usuario {#kick}

Usa el comando: ```/kick [@usuario] [motivo]```

Reemplaza `[@usuario]` con la mencion o ID deseado y `[motivo]` con el motivo de la sancion.
